# photo-dedup

./: .gitignore  README.md  clean.py  pyproject.toml  requirements.txt  scan.py
.github/workflows/: ci.yml  release.yml
photo_dedup/: __init__.py  cleaner.py  exceptions.py  hasher.py  metadata.py  naming.py  scanner.py  utils.py
tests/: test_core.py
